[package]
name = "pallet-staking"
version = "28.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "FRAME pallet staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.195", default-features = false, features = ["alloc", "derive"] }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { workspace = true, default-features = false, features = ["derive", "serde"] }
sp-io = { workspace = true }
sp-runtime = { workspace = true, default-features = false, features = ["serde"] }
sp-staking = { workspace = true, default-features = false, features = ["serde"] }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-session = { workspace = true }
pallet-authorship = { workspace = true }
sp-application-crypto = { workspace = true, default-features = false, features = ["serde"]  }
frame-election-provider-support = { workspace = true }
log = { workspace = true }
tangle-primitives = { workspace = true, default-features = false }

# Optional imports for benchmarking
frame-benchmarking = { workspace = true, default-features = false, optional = true }
rand_chacha = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
sp-tracing = { workspace = true }
sp-core = { workspace = true }
sp-npos-elections = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-bags-list = { workspace = true }
substrate-test-utils = { workspace = true }
frame-benchmarking = { workspace = true }
frame-election-provider-support = { workspace = true }
rand_chacha = { version = "0.2" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-authorship/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"serde/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-npos-elections/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-tracing/std",
	"tangle-primitives/std"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"rand_chacha",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
try-runtime = [
	"frame-election-provider-support/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]
